# multivariate-adaptor-signatures

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  analyze_latency_data.py  build.bat  build.sh  docker-compose.yml  run.bat  run.sh
src/implementations/: multivariate_adaptor.c
src/interfaces/: multivariate_adaptor.h
src/utils/: csv_utils.c  csv_utils.h
tests/Integration Tests/: test_integration.c
tests/Performance Tests/: test_bench.c  test_performance.c
tests/Robustness Tests/: test_negative.c  test_stress.c
tests/Unit Tests/: test_boundary.c  test_core.c  test_sizing.c  test_utility.c  test_validation.c  test_witness.c
